tests/typescript/neg/simple/glob-00.ts
 /*@ glob :: { number | v > 10 } */
var glob = 2;


